--- a/Moho.Web/packages.config
+++ b/Moho.Web/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="bootstrap" version="3.4.1" targetFramework="net452" />
+  <package id="Crc32C.NET" version="1.0.5.0" targetFramework="net452" />
+  <package id="DnsClient" version="1.2.0" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
@@ -9,7 +11,11 @@
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
-  <package id="MongoDB.Bson" version="2.3.0" targetFramework="net452" />
-  <package id="MongoDB.Driver" version="2.3.0" targetFramework="net452" />
-  <package id="MongoDB.Driver.Core" version="2.3.0" targetFramework="net452" />
+  <package id="MongoDB.Bson" version="2.9.2" targetFramework="net452" />
+  <package id="MongoDB.Driver" version="2.9.2" targetFramework="net452" />
+  <package id="MongoDB.Driver.Core" version="2.9.2" targetFramework="net452" />
+  <package id="SharpCompress" version="0.23.0" targetFramework="net452" />
+  <package id="Snappy.NET" version="1.1.1.8" targetFramework="net452" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net452" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net452" />
 </packages>
